# os64

./: .gdbinit  Cargo.toml  Dockerfile  Makefile  README.md  bochsrc.txt  fs.img  notes.md  null  x86_64-unknown-none.json
bochs/: bochslog.txt  bochsrc.txt
isodir/modules/: doomgeneric  forth  os64_background.rgb  program  program2  static  terminal
kernel/: Cargo.toml  Makefile
kernel/.cargo/: config.toml
kernel/src/: allocator.rs  boot.asm  cpu.asm  elf.rs  filesystem.rs  framebuffer.rs  fs.rs  gdt.rs  grub.rs  hashmap.rs  interrupts.rs  isr.asm  keyboard.rs  lib.rs  linker.ld  list.rs  long_mode_init.asm  mouse.rs  multiboot_header.asm  multitask.rs  page_frame_allocator.rs  paging.rs  pic.rs  pit.rs  ports.rs  ps2.rs  spinlock.rs  string.rs  syscalls.rs  test.rs  uart.rs  vga_text.rs  writer.rs
modules/program/: Makefile  linker.ld  program.asm
modules/program2/: Makefile  program2.asm
src/: boot.asm  cpu.asm  gdt.rs  interrupts.rs  isr.asm  keyboard.rs  lib.rs  linker.ld  long_mode_init.asm  main.rs  multitask.asm  multitask.rs  page_frame_allocator.rs  paging.rs  pic.rs  pit.rs  ports.rs  vga_text.rs
toolchain/: Makefile
userland/: linker.ld
userland/hello-1.3/: Makefile  config.status  getopt1.c  hello  hello.c
userland/hello-c/: Makefile  main.c
userland/libc/: Makefile
userland/newlib_build/: Makefile  config.status
userland/program/: Makefile  main.c  program  program.asm
userland/program2/: Makefile  program  program2.asm
userland/static/: Makefile  linker.ld  main.c
userland/syscalls/: syscalls.c  syscalls.h
(+87 files in other folders)
