[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]

[dependencies]
spin = "0.9.3"
multiboot2 = "0.13.3"
bitflags = "0.9.1"
bit_field = "0.7.0"
x86_64 = "0.14.9"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]
